Fixed cart to look nicer on mobile

--- a/components/Cart/styling.scss
+++ b/components/Cart/styling.scss
@@ -1,16 +1,30 @@
 @import "../../theme.global.scss";
 
 .cart {
-  width: 400px;
-  height: 300px;
-  z-index: 999;
-  position: absolute;
-  top: 0;
-  right: 10px;
+  min-width: 400px;
+  min-height: 300px;
+  z-index: 10;
   overflow: hidden;
-  overflow-y: scroll;
   background-color: white;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  position: absolute;
+  right: 0px;
+}
+
+@media only screen and (min-width: 400px) {
+  .cart {
+    width: 100%;
+    min-width: 400px;
+    max-width: 768px;
+  }
+}
+
+@media only screen and (min-width: 769px) {
+  .cart {
+    width: 100%;
+    min-width: 400px;
+    max-width: 400px;
+  }
 }
 
 .image {
@@ -18,9 +32,6 @@
   max-width: 64px;
 }
 
-.outsideCart {
-  width: 100%;
-  height: 100%;
-  color: red;
-  z-index: 999;
+.icon {
+  float: right;
 }
